--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<h1>My LaTeX Document</h1>
 	<ul>
-		<li><a href="src/main.pdf">Lecture Notes</a></li>
+		<li><a href="src/main.pdf">My Document</a></li>
 	</ul>
 </body>
 </html>
